--- a/XMLTreeEditor/XmlTreeEditor.csproj
+++ b/XMLTreeEditor/XmlTreeEditor.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net10.0-windows</TargetFramework>
+    <RootNamespace>XmlTreeEditor</RootNamespace>
+    <AssemblyName>XmlTreeEditor</AssemblyName>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
 </Project>
